dark mode and cache fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   padding: 20px 5px;
+  height: 100%;
 }
 
 .App-logo {
@@ -41,7 +42,8 @@
   flex-wrap: wrap;
   justify-content: center;
   text-align: center;
-  margin: 5px 0;
+  margin: 5px auto;
+  max-width: 800px;
 }
 
 .App-tags-item {
@@ -75,7 +77,7 @@
   justify-content: center;
   text-align: center;
   margin: 25px 0 0;
-  color: darkred;
+  color: red;
 }
 
 .App-picture-items {
@@ -113,7 +115,7 @@
 
 .App-footer {
   text-align: center;
-  background-color: #eee;
+  background-color: #ececec;
   padding: 12px 0;
   position: absolute;
   width: 100%;
@@ -127,7 +129,7 @@
 
 .App-settings {
   bottom: 44px;
-  background-color: #fff;
+  opacity: 0.8;
 }
 
 .App-footer-label {
